--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10837,7 +10837,8 @@ users:
       greenfield:
         permissions: []
       fightclub:
-        permissions: []
+        permissions:
+        - essentials.protect.pvp
     permissions:
     - multiverse.access.underworld
   40b286e8-51f2-4d25-9a09-8369341859ba:
@@ -12902,7 +12903,8 @@ users:
     - infinitythanos
     worlds:
       fightclub:
-        permissions: []
+        permissions:
+        - essentials.protect.pvp
       greenfield:
         permissions: []
     permissions:
@@ -18195,7 +18197,7 @@ users:
       name: BassJupiter6469
   2357ee1a-0c09-4375-8412-adfb7595762d:
     group:
-    - superboykalel
+    - mortal
     options:
       name: Potterkid
   07fb7800-f8ae-4a98-bbe6-7992170a6135:
