--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,10 @@
 groups:
+  gamora:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&0G&1a&am&1o&0r&aa'
+      suffix: '&a'
   yoda:
     inheritance:
     - commonherotraits
@@ -10600,7 +10606,7 @@ users:
       name: Omegaglade23
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - mortal
+    - missmartian
     options:
       name: LostInGalaxeh_
     worlds:
@@ -10854,8 +10860,7 @@ users:
       greenfield:
         permissions: []
       fightclub:
-        permissions:
-        - essentials.protect.pvp
+        permissions: []
     permissions:
     - multiverse.access.underworld
   40b286e8-51f2-4d25-9a09-8369341859ba:
@@ -11645,7 +11650,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - annabethchase
+    - onslaught
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -12920,8 +12925,7 @@ users:
     - infinitythanos
     worlds:
       fightclub:
-        permissions:
-        - essentials.protect.pvp
+        permissions: []
       greenfield:
         permissions: []
     permissions:
@@ -18065,7 +18069,7 @@ users:
       name: LunarPetal
   a8e159ea-deeb-4f73-a246-591b589adcf4:
     group:
-    - missmartian
+    - blacklanternmartianmanhunter
     worlds:
       greenfield:
         permissions: []
@@ -18214,7 +18218,7 @@ users:
       name: BassJupiter6469
   2357ee1a-0c09-4375-8412-adfb7595762d:
     group:
-    - mortal
+    - doctorstrange
     options:
       name: Potterkid
   07fb7800-f8ae-4a98-bbe6-7992170a6135:
