--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11650,7 +11650,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - onslaught
+    - gamora
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -18218,7 +18218,7 @@ users:
       name: BassJupiter6469
   2357ee1a-0c09-4375-8412-adfb7595762d:
     group:
-    - doctorstrange
+    - beastboy
     options:
       name: Potterkid
   07fb7800-f8ae-4a98-bbe6-7992170a6135:
@@ -18239,6 +18239,9 @@ users:
     - darkseid
     options:
       name: piratebulldog
+  eac8f3fb-a0c2-45d4-964b-65273c31e34a:
+    group:
+    - loki
 worlds:
   checkers:
     inheritance:
