--- a/Magic/wands/harryswand2.yml
+++ b/Magic/wands/harryswand2.yml
@@ -1,37 +1,15 @@
 harryswand2:
-  active_spell: kill
+  active_spell: expelliarmus
   mana: 600.0
   effect_color: 274d74a0f611,5d8c5d622d3f,d775451acad6
   page: 0
   spells:
-  - push
-  - torture
-  - pull
-  - flare
-  - lift
-  - fling
-  - fire|3
-  - petrify|3
-  - disarm|3
-  - reflect|4
-  - blink|6
-  - wound|3
-  - kill
+  - expelliarmus
+  - apparate|6
   version: 5
   spell_inventory:
-    flare: 5
-    petrify: 0
-    blink: 31
-    fling: 7
-    disarm: 33
-    kill: 2
-    push: 1
-    pull: 4
-    torture: 3
-    reflect: 29
-    wound: 32
-    lift: 6
-    fire: 34
+    expelliarmus: 0
+    apparate: 1
   mana_regenartion_boost: 20.0
   right_click: inventory
   mana_regenartion: 20.0
