--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,25 +1,26 @@
-storage: {Eobard765ManfightClubLosses: '15', LittleF1refightClubWins: '1', LostInGalaxeh_fightClubWins: '1',
-  KazutoKirigiafightClubLosses: '8', Like_A_Boss382fightClubWins: '2', xSp4rkzfightClubLosses: '8',
-  MegaGreninja25fightClubLosses: '1', mrnegan121212fightClubWins: '1', topmiddle3: '1',
-  topmiddle2: '7', WaggityfightClubLosses: '6', SajiFilmsfightClubWins: '3', MatthewseagodfightClubWins: '1',
-  SpyJay_YTfightClubLosses: '4', Batman_DCUfightClubWins: '2', adambashfightClubWins: '12',
-  WaggityfightClubWins: '12', bottomright3: '6', topmiddle1: '3', RozuufightClubWins: '2',
-  SS_HarleyQuinnfightClubWins: '2', bottomright1: '0', bottomright2: '3', xDcGamer_MCUfightClubWins: '4',
-  Leo4RealfightClubLosses: '2', bottomleft2: '4', bottomleft3: '7', septer101fightClubLosses: '1',
-  ThatCraftLifefightClubLosses: '5', AquariusYTfightClubWins: '1', TooFluffyfightClubWins: '25',
+storage: {Eobard765ManfightClubLosses: '22', LittleF1refightClubWins: '1', LostInGalaxeh_fightClubWins: '1',
+  KazutoKirigiafightClubLosses: '9', Like_A_Boss382fightClubWins: '2', xSp4rkzfightClubLosses: '11',
+  MegaGreninja25fightClubLosses: '1', mrnegan121212fightClubWins: '1', topmiddle3: '2',
+  topmiddle2: '0', WaggityfightClubLosses: '7', SajiFilmsfightClubWins: '3', MatthewseagodfightClubWins: '1',
+  SpyJay_YTfightClubLosses: '7', ZoomplaysfightClubLosses: '9', Batman_DCUfightClubWins: '2',
+  adambashfightClubWins: '12', WaggityfightClubWins: '15', bottomright3: '2', topmiddle1: '3',
+  RozuufightClubWins: '2', SS_HarleyQuinnfightClubWins: '3', bottomright1: '6', bottomright2: '6',
+  xDcGamer_MCUfightClubWins: '4', Leo4RealfightClubLosses: '2', bottomleft2: '3',
+  bottomleft3: '0', septer101fightClubLosses: '1', ThatCraftLifefightClubLosses: '5',
+  AquariusYTfightClubWins: '5', ZoomplaysfightClubWins: '4', TooFluffyfightClubWins: '25',
   RedstoneMonkeyfightClubWins: '1', BrinePlaysYTfightClubLosses: '1', mrnegan121212fightClubLosses: '3',
-  GingastriesfightClubLosses: '1', God_Doesnt_ExistfightClubLosses: '22', God_Doesnt_ExistfightClubWins: '13',
-  septer101fightClubWins: '10', bottommiddle1: '6', bottommiddle2: '2', bottommiddle3: '0',
-  Batman_DCUfightClubLosses: '1', bamfbfightClubLosses: '9', mythguy1226fightClubLosses: '18',
-  Leo4RealfightClubWins: '3', _Vigilance_fightClubLosses: '1', Eobard765ManfightClubWins: '11',
+  GingastriesfightClubLosses: '1', God_Doesnt_ExistfightClubLosses: '28', God_Doesnt_ExistfightClubWins: '32',
+  septer101fightClubWins: '10', bottommiddle1: '9', bottommiddle2: '7', bottommiddle3: '1',
+  Batman_DCUfightClubLosses: '1', bamfbfightClubLosses: '10', mythguy1226fightClubLosses: '18',
+  Leo4RealfightClubWins: '3', _Vigilance_fightClubLosses: '1', Eobard765ManfightClubWins: '17',
   GriffenbearfightClubWins: '2', bamfbfightClubWins: '4', ThatCraftLifefightClubWins: '1',
-  xDcGamer_MCUfightClubLosses: '10', xSp4rkzfightClubWins: '5', topleft1: '6', topleft2: '6',
-  topleft3: '1', BrinePlaysYTfightClubWins: '1', BananaA_fightClubWins: '1', RozuufightClubLosses: '1',
+  xDcGamer_MCUfightClubLosses: '10', xSp4rkzfightClubWins: '7', topleft1: '5', topleft2: '9',
+  topleft3: '9', BrinePlaysYTfightClubWins: '1', BananaA_fightClubWins: '1', RozuufightClubLosses: '1',
   aldrin524fightClubWins: '19', mythguy1226fightClubWins: '10', adambashfightClubLosses: '24',
   raseraafightClubLosses: '1', EmmettGamingfightClubWins: '5', JackLauren1fightClubLosses: '1',
-  bottomleft1: '4', aldrin524fightClubLosses: '3', xDcGamerfightClubWins: '1', TooFluffyfightClubLosses: '"3"',
-  gaminglemonJTfightClubLosses: '4', TonyBongosfightClubWins: '7', AquariusYTfightClubLosses: '2',
-  SS_HarleyQuinnfightClubLosses: '2', MrFlameYTfightClubLosses: '3', SajiFilmsfightClubLosses: '2',
-  MrFlameYTfightClubWins: '1', TonyBongosfightClubLosses: '4', LostInGalaxeh_fightClubLosses: '5',
-  SpyJay_YTfightClubWins: '2', topright3: '0', topright2: '3', topright1: '4', EmmettGamingfightClubLosses: '6',
-  KazutoKirigiafightClubWins: '2', gaminglemonJTfightClubWins: '9'}
+  bottomleft1: '9', aldrin524fightClubLosses: '3', xDcGamerfightClubWins: '1', TooFluffyfightClubLosses: '"3"',
+  gaminglemonJTfightClubLosses: '4', TonyBongosfightClubWins: '8', AquariusYTfightClubLosses: '10',
+  SS_HarleyQuinnfightClubLosses: '3', MrFlameYTfightClubLosses: '3', SajiFilmsfightClubLosses: '2',
+  MrFlameYTfightClubWins: '2', TonyBongosfightClubLosses: '4', LostInGalaxeh_fightClubLosses: '5',
+  SpyJay_YTfightClubWins: '2', topright3: '0', topright2: '1', topright1: '1', EmmettGamingfightClubLosses: '6',
+  RanDumbCEOfightClubLosses: '1', KazutoKirigiafightClubWins: '2', gaminglemonJTfightClubWins: '9'}
