--- a/WorldGuard/worlds/underworld/regions.yml
+++ b/WorldGuard/worlds/underworld/regions.yml
@@ -54,15 +54,16 @@ regions:
     __global__:
         members:
             unique-ids: [87fb3c6c-5ff6-4bf6-b326-992c6137ea12, cb871f86-94e5-4bf3-a78e-42f73c2215c4,
-                869b4227-b51e-452e-adbd-48759a6848dd]
+                869b4227-b51e-452e-adbd-48759a6848dd, 0130299a-4489-429d-b4eb-68643a4c6ac8,
+                c46d7b46-68c0-45f8-8fa6-b3def4682703]
         flags:
             other-explosion: deny
             blocked-cmds-group: NON_MEMBERS
             invincible: allow
             build-group: MEMBERS
             interact: deny
-            pvp: allow
             pistons: allow
+            pvp: allow
             block-place: deny
             pistons-group: MEMBERS
             build: allow
