--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10142,7 +10142,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - spidermanmilesmorales
+    - beerus
     options:
       name: xDcGamer_MCU
     worlds:
@@ -13717,7 +13717,7 @@ users:
       name: lbh04
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     group:
-    - mortal
+    - omega
     options:
       name: xSp4rkz
     permissions:
@@ -18022,7 +18022,7 @@ users:
       name: ItsMickeey
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - infinitysilversurfer
+    - yoda
     options:
       name: TonyBongos
     permissions:
@@ -18355,7 +18355,7 @@ users:
       name: GoldenAlpha_
   502cf8de-399a-49a1-a977-c93d7aa00082:
     group:
-    - batman
+    - apollo
 worlds:
   checkers:
     inheritance:
