--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,26 +1,29 @@
-storage: {Eobard765ManfightClubLosses: '22', LittleF1refightClubWins: '1', LostInGalaxeh_fightClubWins: '1',
+storage: {Eobard765ManfightClubLosses: '22', LittleF1refightClubWins: '7', LostInGalaxeh_fightClubWins: '1',
   KazutoKirigiafightClubLosses: '9', Like_A_Boss382fightClubWins: '2', xSp4rkzfightClubLosses: '11',
   MegaGreninja25fightClubLosses: '1', mrnegan121212fightClubWins: '1', topmiddle3: '1',
-  topmiddle2: '1', WaggityfightClubLosses: '7', SajiFilmsfightClubWins: '3', MatthewseagodfightClubWins: '1',
+  topmiddle2: '0', WaggityfightClubLosses: '7', SajiFilmsfightClubWins: '3', MatthewseagodfightClubWins: '2',
   SpyJay_YTfightClubLosses: '7', ZoomplaysfightClubLosses: '9', Batman_DCUfightClubWins: '2',
-  adambashfightClubWins: '12', WaggityfightClubWins: '15', bottomright3: '0', topmiddle1: '9',
-  RozuufightClubWins: '2', SS_HarleyQuinnfightClubWins: '3', bottomright1: '1', bottomright2: '3',
-  xDcGamer_MCUfightClubWins: '4', Leo4RealfightClubLosses: '2', bottomleft2: '7',
-  bottomleft3: '1', septer101fightClubLosses: '1', ThatCraftLifefightClubLosses: '5',
-  AquariusYTfightClubWins: '5', ZoomplaysfightClubWins: '4', TooFluffyfightClubWins: '25',
-  RedstoneMonkeyfightClubWins: '1', BrinePlaysYTfightClubLosses: '1', mrnegan121212fightClubLosses: '3',
-  GingastriesfightClubLosses: '1', God_Doesnt_ExistfightClubLosses: '28', God_Doesnt_ExistfightClubWins: '32',
-  septer101fightClubWins: '10', bottommiddle1: '7', bottommiddle2: '3', bottommiddle3: '0',
-  Batman_DCUfightClubLosses: '1', bamfbfightClubLosses: '10', mythguy1226fightClubLosses: '18',
-  Leo4RealfightClubWins: '3', _Vigilance_fightClubLosses: '1', Eobard765ManfightClubWins: '17',
-  GriffenbearfightClubWins: '2', bamfbfightClubWins: '4', ThatCraftLifefightClubWins: '1',
-  xDcGamer_MCUfightClubLosses: '10', xSp4rkzfightClubWins: '7', topleft1: '4', topleft2: '6',
-  topleft3: '8', BrinePlaysYTfightClubWins: '1', BananaA_fightClubWins: '1', RozuufightClubLosses: '1',
-  aldrin524fightClubWins: '19', mythguy1226fightClubWins: '10', adambashfightClubLosses: '24',
-  raseraafightClubLosses: '1', EmmettGamingfightClubWins: '5', JackLauren1fightClubLosses: '1',
-  bottomleft1: '3', aldrin524fightClubLosses: '3', xDcGamerfightClubWins: '1', TooFluffyfightClubLosses: '"3"',
-  gaminglemonJTfightClubLosses: '4', TonyBongosfightClubWins: '8', AquariusYTfightClubLosses: '10',
-  SS_HarleyQuinnfightClubLosses: '3', MrFlameYTfightClubLosses: '3', SajiFilmsfightClubLosses: '2',
-  MrFlameYTfightClubWins: '2', TonyBongosfightClubLosses: '4', LostInGalaxeh_fightClubLosses: '5',
-  SpyJay_YTfightClubWins: '2', topright3: '1', topright2: '7', topright1: '3', EmmettGamingfightClubLosses: '6',
-  RanDumbCEOfightClubLosses: '1', KazutoKirigiafightClubWins: '2', gaminglemonJTfightClubWins: '9'}
+  adambashfightClubWins: '12', WaggityfightClubWins: '15', bottomright3: '1', topmiddle1: '0',
+  RozuufightClubWins: '2', SS_HarleyQuinnfightClubWins: '3', HerpaDerp10000fightClubWins: '1',
+  bottomright1: '9', bottomright2: '3', xDcGamer_MCUfightClubWins: '4', Leo4RealfightClubLosses: '2',
+  bottomleft2: '7', bottomleft3: '8', septer101fightClubLosses: '1', Grim765ReaperfightClubWins: '8',
+  ThatCraftLifefightClubLosses: '5', AquariusYTfightClubWins: '5', ZoomplaysfightClubWins: '4',
+  TooFluffyfightClubWins: '25', RedstoneMonkeyfightClubWins: '1', BrinePlaysYTfightClubLosses: '1',
+  mrnegan121212fightClubLosses: '3', GingastriesfightClubLosses: '1', God_Doesnt_ExistfightClubLosses: '32',
+  God_Doesnt_ExistfightClubWins: '34', septer101fightClubWins: '10', bottommiddle1: '7',
+  bottommiddle2: '3', bottommiddle3: '1', Batman_DCUfightClubLosses: '1', bamfbfightClubLosses: '10',
+  mythguy1226fightClubLosses: '18', Leo4RealfightClubWins: '3', _Vigilance_fightClubLosses: '1',
+  Eobard765ManfightClubWins: '17', GriffenbearfightClubWins: '2', Grim765ReaperfightClubLosses: '6',
+  bamfbfightClubWins: '4', ThatCraftLifefightClubWins: '1', xDcGamer_MCUfightClubLosses: '10',
+  xSp4rkzfightClubWins: '7', topleft1: '4', topleft2: '2', topleft3: '9', BrinePlaysYTfightClubWins: '1',
+  BananaA_fightClubWins: '1', LittleF1refightClubLosses: '5', RozuufightClubLosses: '1',
+  aldrin524fightClubWins: '22', mythguy1226fightClubWins: '10', adambashfightClubLosses: '24',
+  raseraafightClubLosses: '1', MatthewseagodfightClubLosses: '1', EmmettGamingfightClubWins: '5',
+  JackLauren1fightClubLosses: '1', bottomleft1: '0', aldrin524fightClubLosses: '3',
+  xDcGamerfightClubWins: '1', TooFluffyfightClubLosses: '"3"', gaminglemonJTfightClubLosses: '4',
+  TonyBongosfightClubWins: '8', AquariusYTfightClubLosses: '10', SS_HarleyQuinnfightClubLosses: '3',
+  MrFlameYTfightClubLosses: '3', SajiFilmsfightClubLosses: '2', MrFlameYTfightClubWins: '2',
+  HerpaDerp10000fightClubLosses: '5', TonyBongosfightClubLosses: '4', LostInGalaxeh_fightClubLosses: '5',
+  SpyJay_YTfightClubWins: '2', topright3: '2', topright2: '9', topright1: '6', EmmettGamingfightClubLosses: '6',
+  EmmettGamingspouse: '"LostInGalaxeh_"', RanDumbCEOfightClubLosses: '1', KazutoKirigiafightClubWins: '2',
+  gaminglemonJTfightClubWins: '9'}
