--- a/PerWorldInventory/config.yml
+++ b/PerWorldInventory/config.yml
@@ -39,7 +39,7 @@ player:
         flying: true
         # Load what gamemode a player is in. This is shadow-set to false if
         # 'manage-gamemodes' is true, to stop infinite loop
-        gamemode: false
+        gamemode: true
         # Load the maximum health a player can have
         max-health: true
         # Load how much health a player has
