--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3490,6 +3490,7 @@ groups:
         - ch.alias.haste2
   default:
     permissions:
+    - multiverse.bypass.gamemode.*
     - ch.alias.vis
     - essentials.build.drop.*
     - essentials.build.pickup.*
@@ -6738,9 +6739,6 @@ groups:
       rollercoaster:
         permissions:
         - essentials.build.interact.*
-      escaperoom:
-        permissions:
-        - essentials.build.*
       underworld:
         permissions:
         - essentials.build.*
@@ -6824,6 +6822,9 @@ groups:
         - crackshot.bypass.all
         - essentials.protect.pvp
         - essentials.build.interact.*
+      escaperoom:
+        permissions:
+        - essentials.build.*
   commonherotraits:
     inheritance:
     - mortal
@@ -10142,7 +10143,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - beerus
+    - mortal
     options:
       name: xDcGamer_MCU
     worlds:
@@ -10240,7 +10241,7 @@ users:
       name: TonyStarkIM
   0889f21e-b82c-49a0-ab3c-6e5b0232d093:
     group:
-    - silversurfer
+    - infinitysilversurfer
     options:
       name: Oranges_are_glad
     permissions:
@@ -10622,7 +10623,7 @@ users:
       name: Omegaglade23
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - annabethchase
+    - missmartian
     options:
       name: LostInGalaxeh_
     worlds:
@@ -11345,7 +11346,7 @@ users:
     options:
       name: Bitslane
     group:
-    - mortal
+    - supergirl
   6abdd48f-0afc-42c7-b819-5aa69a189a40:
     options:
       name: KragenClaw
@@ -13006,6 +13007,12 @@ users:
         - essentials.gamemode.creative
         - essentials.gamemode
         - essentials.build.*
+      deathrun:
+        permissions:
+        - essentials.fly
+        - essentials.gamemode.creative
+        - essentials.gamemode
+        - essentials.build.*
   fc04e24a-2990-48ab-bbf1-9d0064203a0b:
     group:
     - impulsebartallen
@@ -14022,7 +14029,8 @@ users:
     - kirito
     options:
       name: KazutoKirigia
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
     worlds:
       fightclub:
         permissions: []
@@ -14162,10 +14170,9 @@ users:
     group:
     - blackracerwilliewalker
     options:
-      name: Eobard765Man
+      name: Grim765Reaper
     permissions:
     - chat.cooldown
-    - multiverse.access.underworld
     worlds:
       fightclub:
         permissions: []
@@ -14460,7 +14467,7 @@ users:
       name: CookieMonsterr_
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group:
-    - galactus
+    - thor
     options:
       name: TracyMusic
     permissions: []
@@ -14559,7 +14566,7 @@ users:
       name: SimulatedCape
   42759fe9-4f32-43b9-bdbf-8f9dc8de8bc6:
     group:
-    - mortal
+    - zoom
     options:
       name: Zoomplays
     permissions:
@@ -14625,7 +14632,7 @@ users:
       name: MichaelPotter02
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group:
-    - harrypotter
+    - beastboy
     options:
       name: TooFluffy
     permissions:
@@ -14721,7 +14728,7 @@ users:
       name: ccv3
   8cb964f5-d345-4a65-8811-cb3b0c11b51b:
     group:
-    - mewtwo
+    - greenarrow
     options:
       name: Vengeance007
     permissions: []
@@ -15603,7 +15610,7 @@ users:
       name: firedragon200YT
   748c7d68-79e5-4194-9bc8-e446d948ee8a:
     group:
-    - superboykalel
+    - flashwallywest
     options:
       name: alex363
     permissions: []
@@ -15962,7 +15969,7 @@ users:
       name: MCBawler
   debef98b-23ba-461c-847e-968b83f7c891:
     group:
-    - firestormraymondstein
+    - flashbarryallen
     options:
       name: JackLauren1
     permissions:
@@ -16089,7 +16096,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - mortal
+    - yoda
     options:
       name: mythguy1226
     permissions:
@@ -16383,7 +16390,7 @@ users:
     - tiki
   1721499c-d5ae-49ac-8883-8629efc44d85:
     group:
-    - blackracerwilliewalker
+    - goku
     options:
       name: Asriel_Playz
     worlds:
@@ -16795,12 +16802,14 @@ users:
       name: SepticPanda45
   87bb4f34-8ea7-4e22-a9a6-8c157cf33b1e:
     group:
-    - savitar
+    - brainiac
     options:
       name: MrGold4
     worlds:
       greenfield:
         permissions: []
+    permissions:
+    - multiverse.access.underworld
   65f708f6-deb9-4fd3-99f7-c235dd2ce33a:
     group:
     - quarantine
@@ -17119,7 +17128,7 @@ users:
       name: Otaku_Law
   79bde3af-7aae-489c-a44d-ceba16cc7b02:
     group:
-    - artemisyoungjustice
+    - hawkgirl
     options:
       name: Razara_Cheshire
     worlds:
@@ -17201,11 +17210,10 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - onepunchman
+    - galactus
     options:
       name: HerpaDerp10000
-    permissions:
-    - multiverse.access.underworld
+    permissions: []
     worlds:
       fightclub:
         permissions: []
@@ -17683,7 +17691,7 @@ users:
       name: SacabooCDE
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
     group:
-    - martianmanhunter
+    - onepunchman
     worlds:
       fightclub:
         permissions: []
@@ -17721,7 +17729,7 @@ users:
         permissions: []
   7f513768-1d21-45f8-bb54-9d0c9a8b7664:
     group:
-    - timewraith
+    - annabethchase
     options:
       name: NLMatiman
     worlds:
@@ -17979,10 +17987,11 @@ users:
         permissions: []
   c23c6679-b9ff-4249-a1f1-51c4c04ad098:
     group:
-    - onepunchman
+    - mortal
     options:
       name: bamfb
     permissions:
+    - multiverse.access.underworld
     - chat.cooldown
     worlds:
       greenfield:
@@ -18022,10 +18031,11 @@ users:
       name: ItsMickeey
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - yoda
+    - superman
     options:
       name: TonyBongos
     permissions:
+    - multiverse.access.underworld
     - chat.cooldown
     worlds:
       fightclub:
@@ -18045,7 +18055,7 @@ users:
         permissions: []
   c7aebfb0-3174-4245-a933-a027b2858bcd:
     group:
-    - onepunchman
+    - ichigokurosaki
     options:
       name: Griffenbear
     worlds:
@@ -18098,7 +18108,7 @@ users:
       name: LunarPetal
   a8e159ea-deeb-4f73-a246-591b589adcf4:
     group:
-    - jessequick
+    - blacklanternmartianmanhunter
     worlds:
       greenfield:
         permissions: []
@@ -18188,15 +18198,17 @@ users:
       name: ChrisIsMyName
   10c0e6d3-0991-4554-8980-aa7a3a11c99c:
     group:
-    - reverseflasheobardthawne
+    - blackracerwilliewalker
     options:
       name: Matthewseagod
     worlds:
       fightclub:
         permissions: []
+    permissions:
+    - multiverse.access.underworld
   6cc0e521-d120-4901-b5aa-e346245d4b87:
     group:
-    - mortal
+    - blackflash
     options:
       name: LittleF1re
     worlds:
@@ -18205,6 +18217,7 @@ users:
       greenfield:
         permissions: []
     permissions:
+    - chat.cooldown
     - multiverse.access.underworld
   1ab3334a-b233-4226-b6a6-a28419f9bdc6:
     group:
@@ -18232,7 +18245,7 @@ users:
       name: mobeen_21
   85aa44f4-9f3b-45dc-9ea5-9bf2b00d9152:
     group:
-    - redlanternsupergirl
+    - fives
     worlds:
       greenfield:
         permissions: []
@@ -18251,7 +18264,7 @@ users:
       name: BassJupiter6469
   2357ee1a-0c09-4375-8412-adfb7595762d:
     group:
-    - martianmanhunter
+    - deathstroke
     options:
       name: Potterkid
     permissions:
@@ -18291,7 +18304,7 @@ users:
       name: Nok1685
   e37c016f-c5b4-477b-b315-6db019d27cab:
     group:
-    - onepunchman
+    - infinitysilversurfer
     worlds:
       fightclub:
         permissions: []
@@ -18355,7 +18368,30 @@ users:
       name: GoldenAlpha_
   502cf8de-399a-49a1-a977-c93d7aa00082:
     group:
-    - apollo
+    - martianmanhunter
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: ConnerTEP
+  6c28fd40-c02c-496c-9503-702ef6ffc7f9:
+    group:
+    - deathstroke
+    options:
+      name: Legobauer2003
+  40eecf60-9509-4262-bf54-7278851a7b8a:
+    group:
+    - mewtwo
+    options:
+      name: rafb2
+  10c4d72b-9ef5-48d1-9a2a-704dc0e92b07:
+    group:
+    - blackflash
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: SightHillGirl15
 worlds:
   checkers:
     inheritance:
