--- a/WorldGuard/worlds/colosseum/regions.yml
+++ b/WorldGuard/worlds/colosseum/regions.yml
@@ -20,7 +20,8 @@ regions:
         priority: 0
     __global__:
         members: {}
-        flags: {build: deny, use: allow, interact: allow, pvp: allow, mob-spawning: deny}
+        flags: {build: deny, use: allow, fall-damage: deny, interact: allow, pvp: deny,
+            mob-spawning: deny}
         owners: {}
         type: global
         priority: 0
