--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10241,7 +10241,7 @@ users:
       name: TonyStarkIM
   0889f21e-b82c-49a0-ab3c-6e5b0232d093:
     group:
-    - infinitysilversurfer
+    - silversurfer
     options:
       name: Oranges_are_glad
     permissions:
@@ -17987,7 +17987,7 @@ users:
         permissions: []
   c23c6679-b9ff-4249-a1f1-51c4c04ad098:
     group:
-    - mortal
+    - blackracerwilliewalker
     options:
       name: bamfb
     permissions:
