--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3149,6 +3149,16 @@ groups:
         - ch.alias.haste7
         - ch.alias.haste8
         - ch.alias.haste9
+  alice:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&3A&fl&bi&3c&fe'
+      suffix: '&b'
+    permissions:
+    worlds:
+      survival:
+        permissions:
   cyborg:
     inheritance:
     - commonherotraits
