--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3153,12 +3153,8 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&3A&fl&bi&3c&fe'
-      suffix: '&b'
-    permissions:
-    worlds:
-      survival:
-        permissions:
+      prefix: '&3A&fl&ei&bc&fe'
+      suffix: '&f'
   cyborg:
     inheritance:
     - commonherotraits
