--- a/Magic/wands/elderwand.yml
+++ b/Magic/wands/elderwand.yml
@@ -3,17 +3,8 @@ elderwand:
    mana: 600.0 
    effect_color: 274d74a0f611,5d8c5d622d3f,d775451acad6 
    page: 0 
-   spells: 
-   - expelliarmus|3 
-   - protego|4 
-   - apparate|6 
-   - firestorm
-   version: 5 
-   spell_inventory: 
-     disarm: 0
-     reflect: 1
-     blink: 2
-     flmaethrower: 3
+   spells: []
+   spell_inventory: []
    mana_regenartion_boost: 20.0 
    right_click: inventory 
    mana_regenartion: 20.0 
