--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -213,6 +213,7 @@ groups:
         - ch.alias.stopmindcontrol
         - essentials.tppos
         - ch.alias.disguise
+        - ch.alias.illusion
         - ch.alias.run0
         - ch.alias.run1
         - ch.alias.run2
