--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -21,7 +21,8 @@ groups:
         - ch.alias.jump3
         - ch.alias.jump4
         - magic.wand.use
-        - magic.cast.yodaforce
+        - magic.cast.forcepush
+        - magic.use.yodaforce
   hippolytadc:
     inheritance:
     - commonherotraits
